--- a/analysis/evaluation.ipynb
+++ b/analysis/evaluation.ipynb
@@ -1983,27 +1983,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explaining extra burden"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>    <td>additional_burden_nrs</td> <th>  R-squared:         </th> <td>   0.224</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                     <td>OLS</td>          <th>  Adj. R-squared:    </th> <td>   0.204</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>               <td>Least Squares</td>     <th>  F-statistic:       </th> <td>   10.99</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>               <td>Wed, 23 Oct 2019</td>    <th>  Prob (F-statistic):</th>  <td>0.00203</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                   <td>12:14:00</td>        <th>  Log-Likelihood:    </th> <td>  66.302</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>        <td>    40</td>         <th>  AIC:               </th> <td>  -128.6</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>            <td>    38</td>         <th>  BIC:               </th> <td>  -125.2</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>                <td>     1</td>         <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>        <td>nonrobust</td>       <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>    0.2467</td> <td>    0.017</td> <td>   14.634</td> <td> 0.000</td> <td>    0.213</td> <td>    0.281</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>N</th>         <td> 1.958e-05</td> <td> 5.56e-06</td> <td>    3.525</td> <td> 0.001</td> <td> 8.33e-06</td> <td> 3.08e-05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>p</th>         <td>    0.0394</td> <td>    0.003</td> <td>   14.634</td> <td> 0.000</td> <td>    0.034</td> <td>    0.045</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 4.749</td> <th>  Durbin-Watson:     </th> <td>   1.041</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.093</td> <th>  Jarque-Bera (JB):  </th> <td>   3.999</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.773</td> <th>  Prob(JB):          </th> <td>   0.135</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 3.079</td> <th>  Cond. No.          </th> <td>5.04e+19</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 1.49e-31. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+      ],
       "text/plain": [
-       "array([-1.  , -0.95, -0.9 , -0.85, -0.8 , -0.75, -0.7 , -0.65, -0.6 ,\n",
-       "       -0.55, -0.5 , -0.45, -0.4 , -0.35, -0.3 , -0.25, -0.2 , -0.15,\n",
-       "       -0.1 , -0.05,  0.  ,  0.05,  0.1 ,  0.15,  0.2 ,  0.25,  0.3 ,\n",
-       "        0.35,  0.4 ,  0.45,  0.5 ,  0.55,  0.6 ,  0.65,  0.7 ,  0.75,\n",
-       "        0.8 ,  0.85,  0.9 ,  0.95,  1.  ])"
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                              OLS Regression Results                             \n",
+       "=================================================================================\n",
+       "Dep. Variable:     additional_burden_nrs   R-squared:                       0.224\n",
+       "Model:                               OLS   Adj. R-squared:                  0.204\n",
+       "Method:                    Least Squares   F-statistic:                     10.99\n",
+       "Date:                   Wed, 23 Oct 2019   Prob (F-statistic):            0.00203\n",
+       "Time:                           12:14:00   Log-Likelihood:                 66.302\n",
+       "No. Observations:                     40   AIC:                            -128.6\n",
+       "Df Residuals:                         38   BIC:                            -125.2\n",
+       "Df Model:                              1                                         \n",
+       "Covariance Type:               nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      0.2467      0.017     14.634      0.000       0.213       0.281\n",
+       "N           1.958e-05   5.56e-06      3.525      0.001    8.33e-06    3.08e-05\n",
+       "p              0.0394      0.003     14.634      0.000       0.034       0.045\n",
+       "==============================================================================\n",
+       "Omnibus:                        4.749   Durbin-Watson:                   1.041\n",
+       "Prob(Omnibus):                  0.093   Jarque-Bera (JB):                3.999\n",
+       "Skew:                          -0.773   Prob(JB):                        0.135\n",
+       "Kurtosis:                       3.079   Cond. No.                     5.04e+19\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The smallest eigenvalue is 1.49e-31. This might indicate that there are\n",
+       "strong multicollinearity problems or that the design matrix is singular.\n",
+       "\"\"\""
       ]
      },
-     "execution_count": 145,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(np.arange(41)-20)/20"
+    "results = smf.ols('additional_burden_nrs ~ N + p', data=results_df).fit()\n",
+    "results.summary()"
    ]
   },
   {
