--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -322,7 +322,7 @@ Then we introduce our own suggested stopping criteria before testing all criteri
 \begin{figure}
 	\includegraphics[width=\linewidth]{../images/proportions_1.png}
 	\includegraphics[width=\linewidth]{../images/proportions_2.png}
-	\caption{Similar low proportions of relevant documents in unseen documents with different consequences for recall. The top bar shows a random distribution of relevant documents (green) and irrelevant documents (red) at a given proportion of relevance. The bottom bar  shows distributions of relevant and irrelevant documents in hypothetical sets of seen (right) and unseen (left - transparent) documents.}Jonnalagadda2013
+	\caption{Similar low proportions of relevant documents in unseen documents with different consequences for recall. The top bar shows a random distribution of relevant documents (green) and irrelevant documents (red) at a given proportion of relevance. The bottom bar  shows distributions of relevant and irrelevant documents in hypothetical sets of seen (right) and unseen (left - transparent) documents.}
 	\label{unseen-proportions}
 \end{figure}
 
