--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -49,7 +49,7 @@
 %%% Load packages
 %\usepackage{amsthm,amsmath}
 %\RequirePackage{natbib}
-%\RequirePackage[authoryear]{natbib}% uncomment this for author-year bibliography
+\RequirePackage{natbib}% uncomment this for author-year bibliography
 %\RequirePackage{hyperref}
 \usepackage[utf8]{inputenc} %unicode support
 %\usepackage[applemac]{inputenc} %applemac support if unicode package fails
@@ -124,7 +124,7 @@
 			email={callaghan@mcc-berlin.net}   % email address
 			]{\inits{MW}\fnm{Max W} \snm{Callaghan}}
 			\author[
-			addressref={aff1},
+			addressref={aff1, aff3},
 			email={mueller-hansen@mcc-berlin.net}
 			]{\inits{FMH}\fnm{Finn} \snm{M\"{u}ller-Hansen}}
 			
@@ -150,6 +150,13 @@
 				\postcode{LS2 9JT}
 				\city{Leeds},
 				\cny{United Kingdom}
+			}
+			\address[id=aff3]{%
+				\orgname{Potsdam Institute for Climate Impact Research (PIK), Member of the Leibniz Association},
+				\street{P.O. Box 60 12 03},
+				\postcode{D-14412}
+				\city{Potsdam},
+				\cny{Germany}
 			}
 			
 			%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -186,8 +193,8 @@
 				Active learning for systematic review screening promises to reduce the human effort required to identify relevant documents for a systematic review. 
 				Machines and humans  work together, with humans providing training data, and the machine optimising the documents that the humans screen. This enables the identification of all relevant documents after viewing only a fraction of the total documents. 
 				However, current approaches lack robust stopping criteria, so that reviewers do not know when they have seen all or a certain proportion of relevant documents. This means that such systems are hard to implement in live reviews. 
-				This paper introduces a workflow for working with robust and flexible statistical stopping criteria, that offer real work reductions on the basis of a given confidence level of reaching a given recall.
-				The stopping criteria is shown on test datasets to achieve a reliable level of recall, while still providing consistent work reductions, while other methods proposed are shown to provide inconsistent recall and work reductions across datasets.
+				This paper introduces a workflow with robust and flexible statistical stopping criteria, which offer real work reductions on the basis of a given confidence level of reaching a given recall.
+				The stopping criteria are shown on test datasets to achieve a reliable level of recall, while still providing consistent work reductions, while other methods proposed are shown to provide inconsistent recall and work reductions across datasets.
 				
 			\end{abstract}
 			
@@ -259,7 +266,7 @@
 	Active learning is an iterative process where documents screened by humans are used to train a machine learning model to predict the relevance of unseen papers \cite{Settles2009}.
 	The algorithm chooses which studies will next be screened by humans, often those which are likely to be relevant or about which the model is uncertain, in order to generate more labels to feed back to the machine. 
 	By prioritising those studies most likely to be relevant, a human reviewer most often identifies all relevant studies - or a given proportion of relevant studies (recall) - before having seen all the documents in the corpus. 
-	The proportion of documents not yet seen by the human when they reach the given recall threshold is referred to as the work saved, as this represents the proportion of documents that they do not have to screen, which they would have had to without machine learning.
+	The proportion of documents not yet seen by the human when they reach the given recall threshold is referred to as the work saved. This represents the proportion of documents that they do not have to screen, which they would have had to without machine learning.
 	
 	Machine learning applications are often evaluated using sets of documents from already completed systematic reviews for which inclusion or exclusion labels already exist. 
 	As all human labels are known \textit{a priori}, it is possible to simulate the screening process, recording when a given recall target has been achieved.
@@ -278,30 +285,29 @@
 	Without the reliable or reportable achievement of a desired level of recall, deployment of AL systems in live reviews remains challenging.
 	
 	This study proposes a system for estimating the recall based on random sampling of remaining documents. 
-	We use a simple statistical method to iteratively test a null hypothesis that the recall achieved is less than a given target recall.
+	We use a simple statistical method to iteratively test a null hypothesis that the recall achieved is less than a given target recall. If the hypothesis can be rejected, we conclude that the recall target has been achieved with a given confidence level and screening can be stopped.
 	This allows AL users to predefine a target in terms of uncertainty and recall, so that they can make transparent, easily communicable statements like ``There is a <5\% chance that we achieve a recall under 95\%''.
 	
 	The information retrieval literature discusses similar stopping criteria for ranking algorithms like BM25 and variants \cite{DiNunzio2018, Yu2019}. However, the estimators they use to determine the recall rely on the specific ranking functions and depend on their search input. Therefore, the quality of the estimation depends on the adequacy of the model. Our approach, on the contrary, is independent of model choice or model performance. 
 	
-	We evaluate our stopping criteria, along with heuristic and sampling based criteria on real-world systematic review datasets on which AL systems have previously been tested \cite{Cohen2006, Yu2019, Terasawa2009, Castaldi2009}.
+	In the remainder of the paper, we first discuss in detail the shortcomings of existing stopping criteria. Then, we introduce our new criterion based on a hypergeometric test. We evaluate our stopping criteria, and compare their performance with heuristic and sampling based criteria on real-world systematic review datasets on which AL systems have previously been tested \cite{Cohen2006, Yu2019, Terasawa2009, Castaldi2009}.
 	
 	\section*{Methods}
 
+	
+	%\subsection*{Existing Stopping Criteria for Active Learning}
+	
 	We start by explaining the sampling and heuristic based stopping criteria and showing their methodological weaknesses. 
-Then we introduce our own suggested stopping criteria before testing all criteria on real world datasets.
 	
-	\subsection*{Existing Stopping Criteria for Active Learning}
-
+	\subsection*{Sampling Based Stopping Criteria}
 	
-	\subsubsection*{Sampling Based Stopping Criteria}
-	
-	The stopping criterion suggested by \cite{Shemilt2014} involves establishing the Baseline Inclusion Rate (BIR), by taking a random sample at the beginning of screening. 
-	This is used to estimate the number of relevant documents in the whole dataset. 
+	The stopping criterion suggested by Shemilt et al. \cite{Shemilt2014} involves establishing the Baseline Inclusion Rate (BIR), by taking a random sample at the beginning of screening. 
+	The BIR is used to estimate the number of relevant documents in the whole dataset. 
 	Reviewers continue to screen until this number, or a proportion of it corresponding to the desired level of recall, is reached.
 	
 
 	
-	However, the estimation of the BIR fails to take into account sampling uncertainty. 
+	However, the estimation of the BIR fails to correctly take into account sampling uncertainty \footnote{Although Shemilt et al. \cite{Shemilt2014} employ a method  to choose a sample size based on uncertainty, they fail to acknowledge the potential implications for recall of their choices. Their margin of error of 0.0025 and observed proportion of relevant studies of 0.0005 translate to estimates of $400 \pm 2,012$ relevant results. To reduce the margin of error to $\pm 5\%$ of estimated relevant studies, they would have had to screen 638,323 out of 804,919 results}. 
 	Figure \ref{bir-sampling} shows the predicted number of documents after each document drawn for 50 random samples of 2,000 documents from 20,000 documents (where 5\% of documents are relevant). 
 	Depending on the luck of the draw, one might estimate the true number of documents as being
 	\begin{enumerate}
@@ -309,12 +315,12 @@ Then we introduce our own suggested stopping criteria before testing all criteri
 		\item much lower than the true value, meaning that the stopping criterion would be reached before the desired level of recall was actually achieved
 	\end{enumerate}
 	
-	Where the yellow line is above the above the upper grey line, identification of 95\% of the estimated number of studies would be impossible, and no work would be saved. Where it is below, true recall, where recall is estimated to be 95\% would be less than 95\%.
+	Where the yellow line is above the upper grey line, identification of 95\% of the estimated number of studies would be impossible, and no work would be saved. In the example, this is the case for about 47\% of random draws of 2000 documents. Where it is below the lower grey line, the estimated number of relevant documents is estimated to be less than 95\% of the true number, such that the stopping criterion would give a lower recall than desired. For the example, this would occurr in about 32\% of random draws.
+	This shows how even after taking a large sample, baseline estimation inevitably offers poor reliability, both in terms of recall and in work saved.
 
 	\begin{figure}
 	\includegraphics[width=\linewidth]{../images/bir_sampling_noci.png}
 	\caption{Uncertainty in estimating the baseline inclusion rate. For 50 random samples of 2,000 documents from 20,000 documents, we show the estimated number of relevant documents, after each document is drawn. The two horizontal grey  lines correspond to the actual number of relevant documents, and to $\frac{100}{0.95}$\% of relevant documents.
-	This shows how even after taking a large sample, baseline estimation inevitably offers poor reliability, both in terms of recall and in work saved.
 		\label{bir-sampling}
 	}
 \end{figure}
@@ -328,16 +334,16 @@ Then we introduce our own suggested stopping criteria before testing all criteri
 
 
 		
-\subsubsection*{Heuristic Based Stopping Criteria}
+\subsubsection*{Heuristic Stopping Criteria}
 
-Some studies give the example of heuristic based stopping criteria based on drawing a given number of irrelevant articles in a row \cite{Jonnalagadda2013, Przybya2018}. 
+Some studies give the example of heuristic stopping criteria based on drawing a given number of irrelevant articles in a row \cite{Jonnalagadda2013, Przybya2018}. 
 We take this as a proxy for estimating that the proportion of documents remaining in the unseen documents is low. 
 We find this a promising intuition, but argue that 1) it ignores uncertainty, as discussed in relation to the previous method; and 2) it misunderstands the significance of a low proportion of relevant documents in estimating the recall.
 
 Figure \ref{unseen-proportions} illustrates this second point. 
 We show two scenarios with identical low proportions of relevant documents observed in the unseen documents.
-In the top figure, machine learning (ML) has performed well, and 74\% of documents seen were relevant. 
-In the bottom figure,  ML has performed less well, and only 26\% of documents seen were relevant.
+In the top figure, machine learning (ML) has performed well, and 74\% of the seen documents were relevant. 
+In the bottom figure,  ML has performed less well, and only 26\% of the seen documents were relevant.
 In both cases, only 2\% of unseen documents are relevant, but 2\% of a larger number means more relevant documents are missed.
 Recall is not simply a function of the relevance of unseen documents, but also of the number of unseen documents. 
 This also means that where ML has performed well (as in the top figure), a low proportion of relevant documents in those not yet checked is indicative of lower recall than where ML has performed less well.
@@ -347,19 +353,19 @@ Likewise, where the proportion of relevant documents in the whole corpus is low,
 
 \subsubsection*{Other stopping criteria}
 
-\cite{Wallace2010a} Develop a ``simple, operational stopping criterion'': stopping after half the documents have been screened. Although the criterion worked in their experiment, it is unclear how this could be generalised, and its development depended on knowledge of the true relevance values. 
-\cite{Jonnalagadda2013} note that ``the reviewer can elect to end the process of classifying documents at any point, recognizing that stopping before reviewing all documents involves a trade-off of lower recall for reduced workload'', although clearly the reviewer lacks information about probable recall.
-\cite{Yu2019} adopt a more complicated stopping criterion which allows the user to target a specific level of recall. However, reviewers are not given the opportunity to specify a confidence level, and for two of the four datasets in which they tested their criteria, the median achieved recall at a stopping criteria targeting 95\% recall was below 95\%. \cite{DiNunzio2018} also present an innovative stopping criteria, but it does not take into account uncertainty, and produces results \textit{near} a target recall threshold, rather than above it in a reliable proportion of cases. 
+Wallace et al. \cite{Wallace2010a} develop a ``simple, operational stopping criterion'': stopping after half the documents have been screened. Although the criterion worked in their experiment, it is unclear how this could be generalised, and its development depended on knowledge of the true relevance values. 
+Jonnalagadda and Petitti \cite{Jonnalagadda2013} note that ``the reviewer can elect to end the process of classifying documents at any point, recognizing that stopping before reviewing all documents involves a trade-off of lower recall for reduced workload'', although clearly the reviewer lacks information about probable recall.
+Yu and Menzies \cite{Yu2019} adopt a more complicated stopping criterion which allows the user to target a specific level of recall. However, reviewers are not given the opportunity to specify a confidence level, and for two of the four datasets in which they tested their criteria, the median achieved recall at a stopping criteria targeting 95\% recall was below 95\%. Di Nunzio \cite{DiNunzio2018} also present an innovative stopping criteria, but it does not take into account uncertainty, and produces results \textit{near} a target recall threshold, rather than above it in a reliable proportion of cases. 
 These last examples are promising developments, but fail to take into account the needs of live systematic reviews, where the reliability of and ease of communication about recall are paramount.
 
 
 \subsection*{A Statistical Stopping Criterion for Active Learning}
 
-	\subsection*{Random Sampling}
+	\subsubsection*{Random Sampling}
 	
 	After using machine learning to select which documents are screened by humans as described above, we begin drawing a random sample from the remaining documents (when this happens is described below). 
 
-	We use random sampling to estimate the probability that a target recall $\tau$ has been achieved. Because we are sampling a binary outcome without replacement, we can use the hypergeometric distribution to formulate a statistical test. The hypergeometric distribution tells us the statistical significance of observing $k$ successes (relevant documents) in $n$ draws from a finite population of $N$ documents with $K$ successes. 
+	We use random sampling to estimate the probability that a target recall $\tau$ has been achieved. Because we are sampling a binary outcome without replacement, we can use the hypergeometric distribution to formulate a statistical test. The hypergeometric distribution tells us the probability of observing $k$ relevant documents in $n$ draws from a finite population of $N$ documents with $K$ relevant documents. 
 	
 	\begin{equation}
 		k \sim Hypergeometric(N, K, n)
@@ -367,13 +373,13 @@ These last examples are promising developments, but fail to take into account th
 	
 	In our case, we know $k$, $n$ and $N$ after each draw, but $K$ is unknown. We therefore substitute a hypothetical value $\hat{K}$: the minimum number of relevant documents in the sample had the recall target been missed.
 	
-	Recall $R$ is given by the number of relevant documents that have been seen $\dot{\rho}$ over the number of relevant documents in the whole dataset $\rho$
+	Recall $R$ is given by the number of relevant documents that have been seen $\rho_{s}$ over the number of relevant documents in the whole dataset $\rho_{tot}$
 	
 	\begin{equation}
-		R = \frac{\dot{\rho}}{\rho}
+		R = \frac{\rho_{seen}}{\rho_{tot}}
 	\end{equation}
 	
-	The number of relevant documents in the whole dataset is composed of $\hat{\rho}$ relevant documents seen before random sampling began and $\tilde{K}$ relevant documents unseen at the start of random sampling. We can therefore express $R$ as
+	The number of relevant documents in the whole dataset is the sum of $\hat{\rho}$ relevant documents seen before random sampling began and $\tilde{K}$ relevant documents unseen at the start of random sampling. We can therefore express $R$ as
 	
 	\begin{equation}
 		R = \frac{\dot{\rho}}{\hat{\rho} + \tilde{K}},
@@ -385,7 +391,8 @@ These last examples are promising developments, but fail to take into account th
 		\hat{K} = \lceil \frac{\rho}{\tau} - \hat{\rho} \rceil
 	\end{equation}
 	
-	We use the cumulative distribution function to estimate the probability $p$ of having observed $k$ or fewer relevant documents in the sample given $\hat{K}$, or, in other words, the probability of observing as many relevant documents in our random sample as we did, if our recall target had not been achieved.  If this is below our confidence level $1 - \alpha$, we can reject the null hypothesis that the recall target was not achieved.
+	We use the cumulative distribution function of the hypergeometric distribution to estimate the probability $p$ of having observed $k$ or fewer relevant documents in the sample given $\hat{K}$. This function gives us an upper bound on the probability of observing maximally the number of relevant documents in our random sample as we did, if our recall target had not been achieved.
+	If this is below our confidence level $1 - \alpha$, we can reject the null hypothesis that the recall target was not achieved.
 	
 	
 	
@@ -427,7 +434,8 @@ These last examples are promising developments, but fail to take into account th
 %	We can stop the screening once a p-value $p < 1 - \alpha$ is reached.
 
 
-	\subsection*{Pseudo-random sampling}
+	\subsubsection*{Pseudo-random sampling}
+	
 	In order to decide when to begin a random sample, we employ pseudo-random sampling, where we treat previously screened documents as a random sample. The distribution of relevant documents among previously screened documents is clearly not random, as documents predicted to be relevant are prioritised. It is reasonable to assume, though, that the density of relevant documents is greater among previously screened documents than among remaining unseen documents. This would make the following estimates conservative. 
 	
 	After reviewing each document, $S$ documents have been screened, and $U$ documents are yet to be seen. We treat $i = 1 \dots S$ of the previously screened documents as a random sample, and calculate $p$, using the method above, for each sample, taking the minimum across all samples $p_{min}$. If $p_{min}$ is less than $1-\frac{\alpha}{2}$, we switch to random sampling. We also calculate $p_{min}$ for the remaining documents as if we had not switched to random sampling and record the recall and work saved when $p_{min} < 1 - \alpha$. We present these in the results below as the psuedo-random sampling criterion.
@@ -441,7 +449,7 @@ These last examples are promising developments, but fail to take into account th
 		\label{flow}
 	\end{figure}
 
-	\subsection*{Analysis}
+	%\subsection*{Analysis}
 %	
 %	\begin{table}
 %		\begin{tabular}{p{0.15\linewidth} p{0.425\linewidth} p{0.425\linewidth}}
@@ -485,14 +493,14 @@ These last examples are promising developments, but fail to take into account th
 	
 	\subsection*{Evaluation}
 	
-	We evaluate each of the criteria discussed, operationalising the heuristic stopping criteria with 50, 100, and 200 consecutive irrelevant records, on real world test data. We run 100 iterations on each dataset and record 
+	We evaluate each of the criteria discussed on real world test data, operationalising the heuristic stopping criterion with 50, 100, and 200 consecutive irrelevant records. We run 100 iterations on each dataset and record the following measures.
 	\begin{itemize}
-		\item \textbf{Actual Recall}: The recall when the stopping criteria was met
-		\item \textbf{WS-SC}: Work saved when the stopping criteria was met \footnote{We do not use work saved over sampling, is it is not axiomatic that seeing 95\% of a random sample would achieve 95\% recall}
+		\item \textbf{Actual Recall}: The recall when the stopping criterion was met
+		\item \textbf{WS-SC}: Work saved when the stopping criterion was met \footnote{We do not use work saved over sampling, it is not axiomatic that seeing 95\% of a random sample would achieve 95\% recall}
 		\item \textbf{Additional Burden}: the work saved when the criterion was triggered subtracted from the work saved when the recall target was actually achieved.
 
 	\end{itemize}
-	For simplicity, we use a basic SVM model \cite{Cortes95, Pedregosa2011}, with 1-2 word n-grams taken from the document abstracts used as input data. We start with random samples of 200 documents. Subsequently, we ``screen'', that is, we reveal the labels of, batches of the 20 documents with the highest predicted relevance scores, retraining the model after each batch. Each criterion is evaluated after each document is ``screened''.
+	For simplicity, we use a basic SVM model \cite{Cortes95, Pedregosa2011}, with 1-2 word n-grams taken from the document abstracts used as input data. We start with random samples of 200 documents. Subsequently, we ``screen'', that is, we reveal the labels of batches of the 20 documents with the highest predicted relevance scores, retraining the model after each batch. Each criterion is evaluated after each document is ``screened''.
 	 For our criteria, we set the target recall value to 95\% and the confidence level to 95\%.
 	
 	
@@ -509,10 +517,10 @@ These last examples are promising developments, but fail to take into account th
 	
 	\section*{Results}
 	
-	Figure \ref{recall-wss} shows the actual recall and work savings achieved when each stopping criteria has been satisfied. 
+	Figure \ref{recall-wss} shows the actual recall and work savings achieved when each stopping criterion has been satisfied. 
 	For comparison, we also include the results that would have been achieved with \textit{a priori} knowledge of the data, that is, the work saved when the 95\% recall target was actually reached. In a live systematic review, reviewers would never know when this had been reached, but these are the work savings most often reported in machine learning for systematic review screening studies.
 		
-	The baseline sampling criteria (Figure \ref{fig:bir}) misses the 95\% recall target in 39.67\% of cases, while the most common work saving is 0\%. This is in line with our expectations that, due to random sampling error, the expected number of documents will often be over-estimated or under-estimated, resulting in zero work savings or poor recall.
+	The baseline sampling criterion (Figure \ref{fig:bir}) misses the 95\% recall target in 39.67\% of cases, while the most common work saving is 0\%. This is in line with our expectations that, due to random sampling error, the expected number of documents will often be over-estimated or under-estimated, resulting in zero work savings or poor recall.
 
     \begin{figure*}
 	\centering
@@ -564,7 +572,7 @@ These last examples are promising developments, but fail to take into account th
 		\label{fig:pf}
 	\end{subfigure}
 
-	\caption{\small Distribution of recall and work saved after each stopping criteria. Green dots show results for datasets with less than 1,000 documents, orange dots show datasets with 1,000 - 2,000 documents, and blue dots show datasets with more than 2,000 documents} 
+	\caption{\small Distribution of recall and work saved after each stopping criterion. Green dots show results for datasets with less than 1,000 documents, orange dots show datasets with 1,000 - 2,000 documents, and blue dots show datasets with more than 2,000 documents.} 
 	\label{recall-wss}
 \end{figure*}
 
@@ -619,12 +627,12 @@ These last examples are promising developments, but fail to take into account th
 		\label{fig:ih_100_ab}
 	\end{subfigure}
 	
-	\caption{\small Distribution of recall and additional burden after each stopping criteria. Additional burden is the work saved when the criteria was trigerred subtracted from the work saved when the target was reached.} 
+	\caption{\small Distribution of recall and additional burden after each stopping criterion. Additional burden is the work saved when the criterion was triggered minus the work saved when the target was reached. Coloring of data points as in Fig. \ref{recall-wss}.}
 	\label{recall-burden}
 \end{figure*}
 
 
-	The Heuristic based stopping criteria, both for 50 consecutive irrelevant results (Figure \ref{fig:ih_50} - IH50), and for 200 irrelevant results (Figure \ref{fig:ih_200}) also perform unreliably. Although the mean work saved for IH50 is 41\%, the target is missed in 39\% of cases. The cases below the horizontal grey line indicate instances where work has been saved at the expense of achieving the recall target.
+	The Heuristic stopping criteria, both for 50 consecutive irrelevant results (Figure \ref{fig:ih_50} - IH50), and for 200 irrelevant results (Figure \ref{fig:ih_200}) also perform unreliably. Although the mean work saved for IH50 is 41\%, the target is missed in 39\% of cases. The cases below the horizontal grey line indicate instances where work has been saved at the expense of achieving the recall target.
 	
 	Both the random sampling and the pseudorandom sampling criteria achieve the target threshold of 95\% in more than 95\% of cases. In fact, the pseudorandom sampling criterion  outperforms the random sampling criterion with respect to both recall and work savings. In theory, the pseudorandom sampling criteria is conservative if the assumption holds that documents chosen by machine learning are not less likely to be relevant than those chosen at random. Based on our experiments, this assumption seems reasonable, and accounts for the higher recall. Because the pseudorandom sampling criterion can flexibly choose its sample, whereas the random criterion has to wait for a random sample to be triggered, the criterion is also triggered earlier, as it can make use of more data. This accounts for the higher work savings.
 	
@@ -672,25 +680,25 @@ These last examples are promising developments, but fail to take into account th
 		\label{H0paths}
 	\end{figure*}
 	
-	In figure \ref{recall-burden} we rescale the x axis, calling it additional burden, which is simply the work saved when the criterion is triggered subtracted from the work saved when the recall target was actually achieved. This measure indicates whether the stopping criterion was triggered too early (positive values), or too late (negative values). Here we directly highlight the tradeoffs involved in deciding when to stop screening. 
+	In figure \ref{recall-burden} we rescale the x axis, calling it additional burden, which is simply the work saved when the criterion is triggered subtracted from the work saved when the recall target was actually achieved. This measure indicates whether the stopping criterion was triggered too early (positive values), or too late (negative values). The figure directly highlights the tradeoffs involved in deciding when to stop screening. 
 	
-	To help explain the different work savings that were observed in our experiments, we show the distribution of work savings from our pseudorandom criterion for each dataset in figure \ref{wss}. In general, higher work savings are possible when the total number of documents is larger. However, in datasets with a low proportion of relevant documents, smaller work savings are possible. 
+	To help explain the different work savings that were observed in our experiments, we show the distribution of work savings from our pseudorandom criterion for each dataset in figure \ref{wss}. In general, higher work savings are possible when the total number of documents is larger. However, in datasets with a low proportion of relevant documents, many documents need to be screened to achieve a high confidence that there are only few relevant documents remaining in the unseen ones. Therefore, smaller work savings are possible. 
 	
-	Figure \ref{H0paths} shows the recall and the probability of the null hypothesis for the best performing iteration of four datasets. Although the 95\% recall target is achieved very quickly in the Radjenovic dataset, the null hypothesis cannot be excluded until much later. This is because the dataset has only 47 relevant documents out of a population of 5,999. After the 95\% recall target was achieved, 45 out of 47 relevant documents had been seen and 5,029 documents remained. The null hypothesis was therefore that 3 or more of these 5,029 documents were relevant, which requires a lot of evidence to disprove. The burden of proof was smaller in the case of the Proton Beam dataset, where the null hypothesis at the point that the 95\% recall threshold was reached was that 13 out of 3,369 remaining documents were relevant. 
+	Figure \ref{H0paths} shows the recall and the probability of the null hypothesis for the best performing iteration of four datasets. Although the 95\% recall target is achieved very quickly in the Radjenovic dataset, the null hypothesis cannot be excluded until much later. This is because the dataset has only 47 relevant documents out of a population of 5,999. After the 95\% recall target was achieved, 45 out of 47 relevant documents had been seen and 5,029 documents remained. The null hypothesis was therefore that 3 or more of these 5,029 documents were relevant, which requires a lot of evidence to disprove. The burden of proof was smaller in the case of the Proton Beam dataset: at the point that the 95\% recall threshold was reached, the null hypothesis to disprove was that 13 out of 3,369 remaining documents were relevant. 
 	
-	The Statins and Triptans datasets show how the criterion performs when the machine learning model has performed poorly in predicting relevant results. In each case, 95\% recall is achieved with close to 20\% of documents remaining. With fewer documents remaining, it takes less time to rule out the possibility that the number of relevant documents left is greater than that which would be compatible with the achievement of the recall target.
+	The Statins and Triptans datasets show how the criterion performs when the machine learning model has performed poorly in predicting relevant results. In each case, 95\% recall is achieved with close to 20\% of documents remaining. With fewer documents remaining, it takes less screening to rule out the possibility that the number of relevant documents left is incompatible with the achievement of the recall target.
 	
 	\section*{Discussion}
 	
-	Our results show that it is possible to use machine learning to achieve a given level of recall with a given level of uncertainty. The tradeoff for achieving recall reliably is that the work saving achieved is less than the maximum possible work saving. However, for large datasets with a significant proportion of relevant documents, the additional effort required to satisfy the criterion will be smaller. This makes the approach well suited to broad topics with lots of literature. In other words, it is precisely where machine learning will be most useful that the additional effort will be smaller.
+	Our results show that it is possible to use machine learning to achieve a given level of recall with a given level of confidence. The tradeoff for achieving recall reliably is that the work saving achieved is less than the maximum possible work saving. However, for large datasets with a significant proportion of relevant documents, the additional effort required to satisfy the criterion will be small. This makes the approach well suited to broad topics with lots of literature. In other words, it is precisely where machine learning will be most useful that the additional effort will be small.
 	
 	Different use cases for machine learning enhanced screening may also carry different requirements for recall, or different tolerances for uncertainty. These can be flexibly accommodated within our stopping criterion. Importantly, the ability to make probabilistic statements about the chance of achieving a given recall target makes it possible to clearly communicate the implications of using machine learning enhanced screening to readers and reviewers who are not machine learning specialists. This is extremely important in live systematic reviews. 
 	
-	Our criteria has the further advantage that it is independent of the modelling choice or performance. If a machine learning model performs badly at discerning relevant from irrelevant results, the only consequence will be that the work saved will be low. With other criteria this may result in poor recall. 
+	Our criterion has the further advantage that it is independent of the choice or performance of the machine learning model. If a model performs badly at discerning relevant from irrelevant results, the only consequence will be that the work saved will be low. With other criteria this may result in poor recall. 
 	When using machine learning for screening, poor recall can result in biased results, while low work savings represent no loss to the reviewer as compared to not using machine learning.
 	
 	So far, systematic review standards have no way of accommodating screening with machine learning. 
-	We hope that the reliability and clarity of reporting offered by our stopping criteria make them suitable for incorporation into standards, so that machine learning for systematic review screening can fulfil its promise of reducing workload and making more ambitious reviews tractable.
+	We hope that the reliability and clarity of reporting offered by our stopping criterion make them suitable for incorporation into standards, so that machine learning for systematic review screening can fulfil its promise of reducing workload and making more ambitious reviews tractable.
 	
 	\section*{Conclusion}
 	
@@ -703,12 +711,12 @@ These last examples are promising developments, but fail to take into account th
 	The authors declare that they have no competing interests.
 	
 	\section*{Author's contributions}
-	Text for this section \ldots
+	MC designed the research and conducted the experiments. FMH contributed to the development of the statistical basis for the stopping criterion. Both authors wrote and edited the manuscript.
 	
 	\section*{Acknowledgements}
 	Max Callaghan is supported by a PhD scholarship from the Heinrich Böll Foundation
 		
-	\bibliography{../mendeley}
+	\bibliography{mendeley}
 	\bibliographystyle{vancouver}
 	
 \end{backmatter}
